Homogeneización completa del diseño y optimización de CSS
- Añadido Google Fonts (Inter y Playfair Display) a todas las páginas
- Implementados skip-links y aria-labels para accesibilidad WCAG 2.1 AA
- Añadidos scroll-animations.js y dark-mode.js a todas las páginas
- Eliminadas duplicaciones en CSS (reducido de 2119 a ~2050 líneas)
- Migrados todos los estilos inline a clases CSS semánticas
- Creadas clases .hero-video, .widgets-section, .map-section, .quiz-section
- Añadido loading="lazy" a todas las imágenes
- Unificada la estructura HTML en las 8 páginas del sitio

--- a/noticias.html
+++ b/noticias.html
@@ -223,6 +223,8 @@
     <script src="js/news.js?v=2025111003" defer></script>
     <script src="js/cookies.js?v=2025111001" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
+    <script src="js/scroll-animations.js?v=2025111501" defer></script>
+    <script src="js/dark-mode.js?v=2025111501" defer></script>
     <script src="js/ux.js?v=2025111501" defer></script>
     <script src="js/ambient.js?v=2025111501" defer></script>
 
