--- a/playas.html
+++ b/playas.html
@@ -6,9 +6,13 @@
     <title>Playas de Fuerteventura 2025 - Guía Completa de las Mejores Playas | This is Fuerteventura</title>
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/playas.html">
     <link rel="manifest" href="manifest.webmanifest">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css?v=2025111501">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <meta name="theme-color" content="#0f4c81">
     <meta name="description" content="Guía completa de playas de Fuerteventura 2025: Corralejo, Cofete, El Cotillo, Sotavento. Descubre playas paradisíacas, calas vírgenes y spots de surf en las Canarias.">
     <meta name="keywords" content="playas Fuerteventura, mejores playas Canarias, playa Cofete, playas Corralejo, El Cotillo, Sotavento, surf Fuerteventura, playas vírgenes, Bandera Azul">
     <meta name="robots" content="index, follow">
@@ -42,12 +46,13 @@
     </script>
 </head>
 <body>
+    <a class="skip-link" href="#main">Saltar al contenido principal</a>
     <header>
         <div class="logo-container">
-            <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo">
+            <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy">
             <h1>This is Fuerteventura</h1>
         </div>
-        <nav>
+        <nav aria-label="Navegación principal">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="noticias.html">Noticias</a></li>
@@ -89,7 +94,7 @@
 
             <div class="beaches-grid">
                 <article class="beach-card">
-                    <img src="images/playas/corralejo.jpeg" alt="Grandes Playas de Corralejo" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <img src="images/playas/corralejo.jpeg" alt="Grandes Playas de Corralejo" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                     <div class="beach-info">
                         <h3>Grandes Playas de Corralejo</h3>
                         <div class="beach-location">
@@ -110,7 +115,7 @@
                 </article>
 
                 <article class="beach-card">
-                    <img src="images/playas/cofete.jpeg" alt="Playa de Cofete" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <img src="images/playas/cofete.jpeg" alt="Playa de Cofete" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                     <div class="beach-info">
                         <h3>Playa de Cofete</h3>
                         <div class="beach-location">
@@ -131,7 +136,7 @@
                 </article>
 
                 <article class="beach-card">
-                    <img src="images/playas/cotillo.jpeg" alt="Lagos de El Cotillo" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <img src="images/playas/cotillo.jpeg" alt="Lagos de El Cotillo" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                     <div class="beach-info">
                         <h3>Lagos de El Cotillo</h3>
                         <div class="beach-location">
@@ -152,7 +157,7 @@
                 </article>
 
                 <article class="beach-card">
-                    <img src="images/playas/sotavento.jpeg" alt="Playa de Sotavento" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <img src="images/playas/sotavento.jpeg" alt="Playa de Sotavento" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                     <div class="beach-info">
                         <h3>Playa de Sotavento</h3>
                         <div class="beach-location">
@@ -173,7 +178,7 @@
                 </article>
 
                 <article class="beach-card">
-                    <img src="images/playas/ajuy.jpeg" alt="Playa de Ajuy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <img src="images/playas/ajuy.jpeg" alt="Playa de Ajuy" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                     <div class="beach-info">
                         <h3>Playa de Ajuy (Playa Negra)</h3>
                         <div class="beach-location">
@@ -194,7 +199,7 @@
                 </article>
 
                 <article class="beach-card">
-                    <img src="images/playas/morrojable.jpeg" alt="Playa de Morro Jable" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <img src="images/playas/morrojable.jpeg" alt="Playa de Morro Jable" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                     <div class="beach-info">
                         <h3>Playa de Morro Jable</h3>
                         <div class="beach-location">
@@ -215,7 +220,7 @@
                 </article>
 
                 <article class="beach-card">
-                    <img src="images/playas/laconcha.webp" alt="Playa de La Concha" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <img src="images/playas/laconcha.webp" alt="Playa de La Concha" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                     <div class="beach-info">
                         <h3>Playa de La Concha</h3>
                         <div class="beach-location">
@@ -236,7 +241,7 @@
                 </article>
 
                 <article class="beach-card">
-                    <img src="images/playas/esquinzo.jpeg" alt="Playa de Esquinzo" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <img src="images/playas/esquinzo.jpeg" alt="Playa de Esquinzo" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                     <div class="beach-info">
                         <h3>Playa de Esquinzo (Butihondo)</h3>
                         <div class="beach-location">
@@ -257,7 +262,7 @@
                 </article>
 
                 <article class="beach-card">
-                    <img src="images/playas/matorral.jpg" alt="Playa del Matorral" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <img src="images/playas/matorral.jpg" alt="Playa del Matorral" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                     <div class="beach-info">
                         <h3>Playa del Matorral</h3>
                         <div class="beach-location">
@@ -379,7 +384,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
-                <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo">
+                <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy">
                 <h3>This is Fuerteventura</h3>
             </div>
             <div class="footer-links">
@@ -585,6 +590,8 @@
         </script>
     <script src="js/cookies.js?v=2025111001" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
+    <script src="js/scroll-animations.js?v=2025111501" defer></script>
+    <script src="js/dark-mode.js?v=2025111501" defer></script>
     <script src="js/ux.js?v=2025111501" defer></script>
     <script src="js/ambient.js?v=2025111501" defer></script>
 
