--- a/contacto.html
+++ b/contacto.html
@@ -6,8 +6,12 @@
     <title>Contacto - This is Fuerteventura | Información Turística</title>
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/contacto.html">
     <link rel="manifest" href="manifest.webmanifest">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css?v=2025111501">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <meta name="theme-color" content="#0f4c81">
     <meta name="description" content="Contacta con This is Fuerteventura para consultas sobre turismo, alojamiento, playas y eventos en las Islas Canarias. Estamos aquí para ayudarte.">
     <meta name="keywords" content="contacto Fuerteventura, información turística, consultas turismo Canarias">
     <meta name="robots" content="index, follow">
@@ -40,12 +44,13 @@
     </script>
 </head>
 <body>
+    <a class="skip-link" href="#main">Saltar al contenido principal</a>
     <header>
         <div class="logo-container">
-            <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo">
+            <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy">
             <h1>This is Fuerteventura</h1>
         </div>
-        <nav>
+        <nav aria-label="Navegación principal">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="noticias.html">Noticias</a></li>
@@ -222,6 +227,8 @@
 
     <script src="js/main.js?v=2025111501" defer></script>
     <script src="js/cookies.js?v=2025111001" defer></script>
+    <script src="js/scroll-animations.js?v=2025111501" defer></script>
+    <script src="js/dark-mode.js?v=2025111501" defer></script>
     <script src="js/ux.js?v=2025111501" defer></script>
     <script src="js/ambient.js?v=2025111501" defer></script>
 
