--- a/gastronomia.html
+++ b/gastronomia.html
@@ -6,9 +6,13 @@
     <title>Gastronomía de Fuerteventura 2025 - Restaurantes y Cocina Canaria | This is Fuerteventura</title>
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/gastronomia.html">
     <link rel="manifest" href="manifest.webmanifest">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css?v=2025111501">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <meta name="theme-color" content="#0f4c81">
     <meta name="description" content="Gastronomía de Fuerteventura 2025: descubre los mejores restaurantes, platos típicos canarios, queso majorero DOP, papas arrugadas y la cocina tradicional de la isla.">
     <meta name="keywords" content="restaurantes Fuerteventura, gastronomía canaria, queso majorero, papas arrugadas, gofio, donde comer Fuerteventura, cocina tradicional Canarias, restaurantes Corralejo">
     <meta name="robots" content="index, follow">
@@ -43,12 +47,13 @@
     </script>
 </head>
 <body>
+    <a class="skip-link" href="#main">Saltar al contenido principal</a>
     <header>
         <div class="logo-container">
-            <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo">
+            <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy">
             <h1>This is Fuerteventura</h1>
         </div>
-        <nav>
+        <nav aria-label="Navegación principal">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="noticias.html">Noticias</a></li>
@@ -787,7 +792,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
-                <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo">
+                <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy">
                 <h3>This is Fuerteventura</h3>
             </div>
             <div class="footer-links">
@@ -828,6 +833,8 @@
     <script src="js/content-loader.js?v=2025111003" defer></script>
     <script src="js/cookies.js?v=2025111001" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
+    <script src="js/scroll-animations.js?v=2025111501" defer></script>
+    <script src="js/dark-mode.js?v=2025111501" defer></script>
     <script src="js/ux.js?v=2025111501" defer></script>
     <script src="js/ambient.js?v=2025111501" defer></script>
 
