Mejoras responsive y corrección del header
- Implementado VideoHeader.mp4 local en index.html y playas.html
- Añadidas media queries responsive completas para hero, widgets, galerías y grids
- Unificados estilos de video hero (.hero-video, .beaches-hero, .parallax)
- Corregidas fuentes del header (Lobster → Playfair Display)
- Eliminada duplicación de estilos nav.nav-open
- Optimizado responsive en móviles (100vh → 70vh → 60vh)
- Añadidos breakpoints para 480px, 600px, 768px y 992px

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <main id="main">
     <section class="hero parallax reveal hero-video">
       <video autoplay muted loop playsinline class="hero-bg" poster="images/Fuerteventura.jpeg">
-        <source src="https://cdn.coverr.co/videos/coverr-waves-crashing-on-shore/1080p.mp4" type="video/mp4">
+        <source src="images/VideoHeader.mp4" type="video/mp4">
         Tu navegador no soporta vídeo.
       </video>
       <div class="hero-overlay"></div>
