--- a/playas.html
+++ b/playas.html
@@ -69,12 +69,13 @@
     </header>
 
     <main id="main">
-    <section class="hero beaches-hero parallax reveal particle-scene" style="position:relative;">
-        <video autoplay muted loop playsinline class="hero-bg" poster="images/hero-poster.jpg" style="position:absolute;inset:0;width:100vw;height:100vh;object-fit:cover;z-index:0;filter:brightness(0.7);">
-            <source src="images/olas.mp4" type="video/mp4">
+    <section class="hero beaches-hero parallax reveal particle-scene">
+        <video autoplay muted loop playsinline class="hero-bg" poster="images/Fuerteventura.jpeg">
+            <source src="images/VideoHeader.mp4" type="video/mp4">
             Tu navegador no soporta vídeo.
         </video>
-        <div class="hero-content" style="position:relative;z-index:1;padding:4rem 2rem;text-align:center;">
+        <div class="hero-overlay"></div>
+        <div class="hero-content">
             <h1 class="reveal">Playas de Fuerteventura</h1>
             <p class="reveal">Descubre el paraíso de arena y mar</p>
         </div>
