--- a/playas.html
+++ b/playas.html
@@ -11,7 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css?v=2025111501">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"></noscript>
     <meta name="theme-color" content="#0f4c81">
     <meta name="description" content="Guía completa de playas de Fuerteventura 2025: Corralejo, Cofete, El Cotillo, Sotavento. Descubre playas paradisíacas, calas vírgenes y spots de surf en las Canarias.">
     <meta name="keywords" content="playas Fuerteventura, mejores playas Canarias, playa Cofete, playas Corralejo, El Cotillo, Sotavento, surf Fuerteventura, playas vírgenes, Bandera Azul">
