--- a/politica-cookies.html
+++ b/politica-cookies.html
@@ -6,7 +6,8 @@
     <title>Política de Cookies - This is Fuerteventura</title>
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/politica-cookies.html">
     <link rel="stylesheet" href="css/styles.css?v=2025111501">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"></noscript>
     <meta name="description" content="Política de cookies de This is Fuerteventura. Información sobre el uso de cookies en nuestro sitio web.">
     <meta name="robots" content="index, follow">
 </head>
