Fix: Unificación de héroes con video, ajuste velocidad timeline y actualización Font Awesome
- Cambiar todos los héroes a usar VideoHeader.mp4 en vez de Three.js particles
- Reducir velocidad del timeline de noticias (speed 6000→800, delay 0→3000)
- Actualizar Font Awesome de 6.0.0-beta3 a 6.5.1 estable en todas las páginas
- Añadir preconnect de Google Fonts en index.html para optimización

--- a/alojamiento.html
+++ b/alojamiento.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css?v=2025111501">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"></noscript>
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"></noscript>
     <meta name="theme-color" content="#0f4c81">
     <meta name="description" content="Encuentra el mejor alojamiento en Fuerteventura 2025: hoteles todo incluido, apartamentos vacacionales, villas de lujo y casas rurales. Corralejo, Caleta de Fuste, Jandía y más.">
     <meta name="keywords" content="hoteles Fuerteventura, apartamentos Fuerteventura, alojamiento Corralejo, hoteles Caleta de Fuste, villas Fuerteventura, todo incluido Canarias, donde alojarse Fuerteventura">
@@ -71,7 +71,12 @@
     </header>
 
     <main id="main">
-    <section class="hero accommodation-hero parallax reveal particle-scene">
+    <section class="hero accommodation-hero parallax reveal hero-video">
+        <video autoplay muted loop playsinline class="hero-bg" poster="images/Fuerteventura.jpeg">
+            <source src="images/VideoHeader.mp4" type="video/mp4">
+            Tu navegador no soporta vídeo.
+        </video>
+        <div class="hero-overlay"></div>
         <div class="hero-content">
             <h2>Alojamiento en Fuerteventura</h2>
             <p>Encuentra tu hogar perfecto en la isla</p>
