--- a/noticia.html
+++ b/noticia.html
@@ -8,8 +8,8 @@
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/noticia.html">
 	<link rel="manifest" href="manifest.webmanifest">
 	<link rel="stylesheet" href="css/styles.css?v=2025111501">
-	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"></noscript>
+	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"></noscript>
 	<meta name="description" content="Lee las últimas noticias de Fuerteventura con información detallada, imágenes y fuentes verificadas.">
 	<meta name="robots" content="index, follow, max-image-preview:large">
 	
