--- a/noticias.html
+++ b/noticias.html
@@ -9,8 +9,8 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/styles.css?v=2025111501">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"></noscript>
+	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"></noscript>
 	<meta name="description" content="Últimas noticias de Fuerteventura 2025: actualidad local, eventos, turismo, cultura y deportes. Mantente informado sobre las Islas Canarias.">
     <meta name="keywords" content="noticias Fuerteventura, actualidad Fuerteventura, eventos Fuerteventura, noticias Canarias, prensa Fuerteventura, información local">
     <meta name="robots" content="index, follow, max-image-preview:large">
