--- a/contacto.html
+++ b/contacto.html
@@ -68,7 +68,12 @@
     </header>
 
     <main id="main">
-    <section class="hero contact-hero parallax reveal">
+    <section class="hero contact-hero parallax reveal hero-video">
+        <video autoplay muted loop playsinline class="hero-bg" poster="images/Fuerteventura.jpeg">
+            <source src="images/VideoHeader.mp4" type="video/mp4">
+            Tu navegador no soporta vídeo.
+        </video>
+        <div class="hero-overlay"></div>
         <div class="hero-content">
             <h2>Contacto</h2>
             <p>Estamos aquí para ayudarte</p>
