--- a/noticias.html
+++ b/noticias.html
@@ -91,7 +91,12 @@
     </header>
 
     <main id="main">
-    <section class="hero parallax reveal">
+    <section class="hero parallax reveal hero-video">
+        <video autoplay muted loop playsinline class="hero-bg" poster="images/Fuerteventura.jpeg">
+            <source src="images/VideoHeader.mp4" type="video/mp4">
+            Tu navegador no soporta vídeo.
+        </video>
+        <div class="hero-overlay"></div>
         <div class="hero-content">
             <h2>Noticias de Fuerteventura</h2>
             <p>Mantente al día con las últimas novedades de la isla</p>
