Refactor: Optimización profesional del proyecto
- Eliminar todos los estilos inline (politica-cookies, turismo, noticia)
- Crear clases CSS reutilizables (.cookies-page, .cookies-section, .interactive-map-section, .btn-back)
- Añadir Google Fonts a noticia.html
- Mejorar preconnect y dns-prefetch en index.html
- Actualizar todas las versiones de cache CSS a v=2025111502
- Añadir aria-current="page" en politica-cookies.html
- Optimizar accesibilidad con skip-links consistentes
- Mejorar SEO con loading="lazy" en logos

--- a/noticia.html
+++ b/noticia.html
@@ -7,7 +7,10 @@
 	<meta name="theme-color" content="#0f4c81">
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/noticia.html">
 	<link rel="manifest" href="manifest.webmanifest">
-	<link rel="stylesheet" href="css/styles.css?v=2025111501">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/styles.css?v=2025111502">
 	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"></noscript>
 	<meta name="description" content="Lee las últimas noticias de Fuerteventura con información detallada, imágenes y fuentes verificadas.">
@@ -46,7 +49,7 @@
 
 	<main class="article-page" id="main">
 		<div class="container reveal">
-			<a href="noticias.html" class="btn" style="margin: 20px 0; display:inline-flex; align-items:center; gap:8px;">
+			<a href="noticias.html" class="btn btn-back">
 				<i class="fas fa-chevron-left"></i> Volver a noticias
 			</a>
 			<div id="article-container">
