--- a/turismo.html
+++ b/turismo.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css?v=2025111501">
+    <link rel="stylesheet" href="css/styles.css?v=2025111502">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -404,9 +404,9 @@
     </section>
 
     <!-- Mapa interactivo -->
-    <section class="reveal" aria-label="Mapa interactivo de Fuerteventura">
-        <h2 style="padding: 0 5%">Mapa interactivo</h2>
-        <div id="map" style="height: 380px; margin: 16px 5%; border-radius: 10px; overflow: hidden; box-shadow: 0 6px 18px rgba(0,0,0,0.08);"></div>
+    <section class="reveal interactive-map-section" aria-label="Mapa interactivo de Fuerteventura">
+        <h2>Mapa interactivo</h2>
+        <div id="map"></div>
     </section>
 
     <!-- Noticias en timeline (auto de featured) -->
