Fix: Limpieza final y sincronización total de versiones
- Eliminar scripts duplicados de index.html
- Limpiar contenido HTML duplicado en politica-cookies.html
- Actualizar TODAS las versiones de scripts JS a v=2025111502
- Garantizar consistencia absoluta en cache busting
- 9 archivos HTML completamente sincronizados

--- a/politica-cookies.html
+++ b/politica-cookies.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -184,153 +184,5 @@
     <script src="js/main.js?v=2025111502" defer></script>
     <script src="js/scroll-animations.js?v=2025111502" defer></script>
     <script src="js/dark-mode.js?v=2025111502" defer></script>
-</body>
-</html>
-
-    <main class="reveal" style="padding: 40px 5%; max-width: 1200px; margin: 0 auto;">
-        <h1>Política de Cookies</h1>
-        <p><strong>Última actualización:</strong> 10 de noviembre de 2025</p>
-
-        <section style="margin: 30px 0;">
-            <h2>¿Qué son las cookies?</h2>
-            <p>
-                Las cookies son pequeños archivos de texto que los sitios web almacenan en tu dispositivo (ordenador, tablet o smartphone) 
-                cuando los visitas. Las cookies se utilizan ampliamente para hacer que los sitios web funcionen de manera más eficiente, 
-                así como para proporcionar información a los propietarios del sitio.
-            </p>
-        </section>
-
-        <section style="margin: 30px 0;">
-            <h2>¿Cómo utilizamos las cookies?</h2>
-            <p>
-                En This is Fuerteventura utilizamos cookies para mejorar tu experiencia de navegación, recordar tus preferencias 
-                y analizar cómo interactúas con nuestro sitio web. Esto nos ayuda a ofrecerte contenido más relevante y mejorar 
-                nuestros servicios.
-            </p>
-        </section>
-
-        <section style="margin: 30px 0;">
-            <h2>Tipos de cookies que utilizamos</h2>
-
-            <h3 style="margin-top: 20px;">1. Cookies Necesarias</h3>
-            <p>
-                Estas cookies son esenciales para que puedas navegar por el sitio web y utilizar sus funciones. 
-                Sin estas cookies, no podemos proporcionar ciertos servicios o funciones, y el sitio no funcionará 
-                tan correctamente como debería. Estas cookies no recopilan información sobre ti que pueda utilizarse 
-                para marketing o para recordar dónde has estado en internet.
-            </p>
-            <ul>
-                <li><strong>Cookie de consentimiento:</strong> Guarda tu preferencia sobre el uso de cookies (12 meses)</li>
-                <li><strong>Cookies de sesión:</strong> Permiten la navegación básica por el sitio</li>
-            </ul>
-
-            <h3 style="margin-top: 20px;">2. Cookies Analíticas</h3>
-            <p>
-                Estas cookies nos permiten reconocer y contar el número de visitantes y ver cómo los visitantes 
-                se mueven por nuestro sitio cuando lo están utilizando. Esto nos ayuda a mejorar la forma en que 
-                funciona nuestro sitio web, por ejemplo, asegurando que los usuarios encuentren fácilmente lo que buscan.
-            </p>
-            <ul>
-                <li><strong>Google Analytics:</strong> Analiza el comportamiento de los usuarios (si está activado)</li>
-            </ul>
-
-            <h3 style="margin-top: 20px;">3. Cookies de Marketing</h3>
-            <p>
-                Estas cookies se utilizan para rastrear a los visitantes en los sitios web. La intención es 
-                mostrar anuncios que sean relevantes y atractivos para el usuario individual y, por lo tanto, 
-                más valiosos para los editores y anunciantes de terceros.
-            </p>
-
-            <h3 style="margin-top: 20px;">4. Cookies Funcionales</h3>
-            <p>
-                Estas cookies permiten que el sitio web recuerde las elecciones que haces (como tu nombre de usuario, 
-                idioma o la región en la que te encuentras) y proporcionan características mejoradas y más personales.
-            </p>
-        </section>
-
-        <section style="margin: 30px 0;">
-            <h2>¿Cómo puedo controlar las cookies?</h2>
-            <p>
-                Tienes el derecho de decidir si aceptas o rechazas las cookies. Puedes ejercer tus preferencias de cookies 
-                haciendo clic en el botón "Configurar cookies" que aparece en nuestro banner de cookies.
-            </p>
-            <p>
-                También puedes configurar o modificar los controles de tu navegador web para aceptar o rechazar cookies. 
-                Si eliges rechazar las cookies, aún puedes utilizar nuestro sitio web, aunque tu acceso a algunas funciones 
-                y áreas puede estar restringido.
-            </p>
-
-            <h3 style="margin-top: 20px;">Gestión de cookies en navegadores populares:</h3>
-            <ul>
-                <li><strong>Google Chrome:</strong> Configuración → Privacidad y seguridad → Cookies</li>
-                <li><strong>Mozilla Firefox:</strong> Opciones → Privacidad y seguridad → Cookies</li>
-                <li><strong>Safari:</strong> Preferencias → Privacidad → Cookies</li>
-                <li><strong>Microsoft Edge:</strong> Configuración → Privacidad → Cookies</li>
-            </ul>
-        </section>
-
-        <section style="margin: 30px 0;">
-            <h2>Cookies de terceros</h2>
-            <p>
-                Además de nuestras propias cookies, también podemos utilizar varias cookies de terceros para informar 
-                sobre estadísticas de uso del sitio web y ofrecer anuncios en el sitio web y a través de internet.
-            </p>
-            <p>
-                Estos terceros pueden incluir:
-            </p>
-            <ul>
-                <li>Google Analytics (análisis del sitio web)</li>
-                <li>Redes sociales (para compartir contenido)</li>
-                <li>Proveedores de CDN (para acelerar la carga del sitio)</li>
-            </ul>
-        </section>
-
-        <section style="margin: 30px 0;">
-            <h2>Cambios en esta política</h2>
-            <p>
-                Podemos actualizar esta Política de Cookies ocasionalmente para reflejar, por ejemplo, cambios 
-                en las cookies que utilizamos o por otras razones operativas, legales o regulatorias. 
-                Por favor, vuelve a visitar esta Política de Cookies regularmente para mantenerte informado 
-                sobre nuestro uso de cookies y tecnologías relacionadas.
-            </p>
-        </section>
-
-        <section style="margin: 30px 0;">
-            <h2>Más información</h2>
-            <p>
-                Si tienes alguna pregunta sobre nuestro uso de cookies u otras tecnologías, envíanos un correo 
-                electrónico a través de nuestra <a href="contacto.html">página de contacto</a>.
-            </p>
-        </section>
-
-        <div style="margin-top: 40px; padding: 20px; background: #f8f9fa; border-radius: 8px;">
-            <p style="margin: 0; text-align: center;">
-                <strong>This is Fuerteventura</strong> se compromete a proteger tu privacidad y ser transparente 
-                sobre las tecnologías que utilizamos.
-            </p>
-        </div>
-    </main>
-
-    <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo">
-                <p>&copy; 2025 This is Fuerteventura. Todos los derechos reservados.</p>
-            </div>
-            <div class="footer-section">
-                <h3>Enlaces</h3>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="noticias.html">Noticias</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                    <li><a href="politica-cookies.html">Política de Cookies</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
-
-    <script src="js/main.js?v=2025111501" defer></script>
-    <script src="js/ux.js?v=2025111501" defer></script>
-    <script src="js/ambient.js?v=2025111501" defer></script>
 </body>
 </html>
