--- a/turismo.html
+++ b/turismo.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turismo en Fuerteventura 2025 - Guía de Lugares y Atracciones | This is Fuerteventura</title>
-    <link rel="canonical" href="https://thisisfuerteventura.netlify.app/turismo.html">
-    <link rel="manifest" href="manifest.webmanifest">
+    <meta name="theme-color" content="#0f4c81">
+    
+    <!-- Preconnect to external resources for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+    <link rel="dns-prefetch" href="https://unpkg.com">
+    
+    <link rel="canonical" href="https://thisisfuerteventura.netlify.app/turismo.html">
+    <link rel="manifest" href="manifest.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css?v=2025111502">
+    <style>
+        /* Override header transparency */
+        header {
+            background-color: rgb(10, 14, 18) !important;
+        }
+        html[data-theme="dark"] header {
+            background-color: rgb(10, 14, 18) !important;
+        }
+    </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
