Fix: Auditoría profesional completa - Eliminados saltos en scroll, corregida maquetación HTML y optimizadas transiciones CSS
- Implementado JavaScript para header sticky con clase .scrolled (requestAnimationFrame)
- Optimizadas transiciones CSS con cubic-bezier y will-change
- Añadido scroll-behavior: smooth con soporte prefers-reduced-motion
- Corregido article duplicado en playas.html (líneas 98-99)
- Reubicado comentario HTML en noticia.html
- Mejoradas transiciones nav móvil (0.35s cubic-bezier)
- Header transitions más suaves (padding, box-shadow, background)

--- a/noticia.html
+++ b/noticia.html
@@ -101,7 +101,9 @@
     <script src="js/scroll-animations.js?v=2025111502" defer></script>
     <script src="js/dark-mode.js?v=2025111502" defer></script>
     <script src="js/ux.js?v=2025111502" defer></script>
-    <script src="js/ambient.js?v=2025111502" defer></script>	<!-- Cookie Consent Banner -->
+    <script src="js/ambient.js?v=2025111502" defer></script>
+	
+	<!-- Cookie Consent Banner -->
 	<div id="cookie-consent" class="cookie-consent">
 		<div class="cookie-consent-content">
 			<div class="cookie-consent-text">
