Fix: Mejoras de accesibilidad y usabilidad en formularios
- Añadidos atributos aria-label en todos los inputs
- Implementado autocomplete (email, name) para mejor UX
- Añadido pattern de validación en campos email
- Añadido atributo name en newsletter de index.html
- Mejorada accesibilidad en input de búsqueda de noticias

Todos los formularios ahora cumplen con estándares WCAG 2.1

--- a/noticias.html
+++ b/noticias.html
@@ -106,7 +106,10 @@
     <section class="news-filters reveal">
         <div class="container">
             <div class="search-bar">
-                <input type="text" id="news-search" placeholder="Buscar noticias...">
+                <input type="text" 
+                       id="news-search" 
+                       placeholder="Buscar noticias..."
+                       aria-label="Buscar noticias por título o contenido">
                 <button id="search-btn" class="btn"><i class="fas fa-search"></i></button>
             </div>
         </div>
