--- a/alojamiento.html
+++ b/alojamiento.html
@@ -941,7 +941,7 @@
     <script src="js/ux.js?v=2025111502" defer></script>
     <script src="js/ambient.js?v=2025111502" defer></script>
     <!-- Three.js for particle system -->
-    <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js" defer></script>
     <!-- GSAP + ScrollTrigger for narrative animations -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
