--- a/contacto.html
+++ b/contacto.html
@@ -121,16 +121,31 @@
                 <h2>Envíanos un mensaje</h2>
                 <form id="contact-form">
                     <div class="form-group">
-                        <label for="name">Nombre completo</label>
-                        <input type="text" id="name" name="name" required>
+                        <label for="name">Nombre</label>
+                        <input type="text" 
+                               id="name" 
+                               name="name" 
+                               autocomplete="name"
+                               aria-label="Tu nombre completo"
+                               required>
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" id="email" name="email" required>
+                        <input type="email" 
+                               id="email" 
+                               name="email" 
+                               autocomplete="email"
+                               aria-label="Tu dirección de correo electrónico"
+                               pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                               required>
                     </div>
                     <div class="form-group">
                         <label for="subject">Asunto</label>
-                        <input type="text" id="subject" name="subject" required>
+                        <input type="text" 
+                               id="subject" 
+                               name="subject"
+                               aria-label="Asunto del mensaje" 
+                               required>
                     </div>
                     <div class="form-group">
                         <label for="message">Mensaje</label>
