--- a/index.html
+++ b/index.html
@@ -209,7 +209,14 @@
         <h2>Suscríbete a nuestro boletín</h2>
         <p>Recibe las últimas noticias y ofertas de Fuerteventura directamente en tu correo.</p>
         <form id="newsletter-form">
-            <input type="email" id="newsletter-email" placeholder="Tu correo electrónico" required>
+            <input type="email" 
+                   id="newsletter-email" 
+                   name="email"
+                   placeholder="Tu correo electrónico" 
+                   aria-label="Correo electrónico para suscripción"
+                   autocomplete="email"
+                   pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                   required>
             <button type="submit" class="btn">Suscribirse</button>
         </form>
     </section>
@@ -293,7 +300,7 @@
         });
     </script>
     <!-- Three.js for particle system -->
-    <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js" defer></script>
     <!-- GSAP + ScrollTrigger for narrative animations -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
