--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
     <!-- Three.js for particle system -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js" defer></script>
     <!-- GSAP + ScrollTrigger for narrative animations -->
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js" defer></script>
 
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent" class="cookie-consent">
