--- a/turismo.html
+++ b/turismo.html
@@ -482,8 +482,8 @@
     <!-- Three.js for particle system -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js" defer></script>
     <!-- GSAP + ScrollTrigger for narrative animations -->
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
     <script src="js/scroll-animations.js?v=2025111502" defer></script>
     <script src="js/dark-mode.js?v=2025111502" defer></script>
