--- a/noticia.html
+++ b/noticia.html
@@ -5,16 +5,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Noticia - This is Fuerteventura</title>
 	<meta name="theme-color" content="#0f4c81">
-    <link rel="canonical" href="https://thisisfuerteventura.netlify.app/noticia.html">
-	<link rel="manifest" href="manifest.webmanifest">
+	<meta name="description" content="Lee las últimas noticias de Fuerteventura con información detallada, imágenes y fuentes verificadas.">
+	<meta name="robots" content="index, follow, max-image-preview:large">
+	
+	<!-- Preconnect to external resources for performance -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+	<link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+	
+	<link rel="canonical" href="https://thisisfuerteventura.netlify.app/noticia.html">
+	<link rel="manifest" href="manifest.webmanifest">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css?v=2025111502">
 	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"></noscript>
-	<meta name="description" content="Lee las últimas noticias de Fuerteventura con información detallada, imágenes y fuentes verificadas.">
-	<meta name="robots" content="index, follow, max-image-preview:large">
 	
 	<!-- Open Graph - Serán actualizados dinámicamente por JS -->
 	<meta property="og:type" content="article">
