--- a/turismo.html
+++ b/turismo.html
@@ -17,15 +17,6 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css?v=2025111502">
-    <style>
-        /* Override header transparency */
-        header {
-            background-color: rgb(10, 14, 18) !important;
-        }
-        html[data-theme="dark"] header {
-            background-color: rgb(10, 14, 18) !important;
-        }
-    </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -63,7 +54,7 @@
     }
     </script>
 </head>
-<body>
+<body class="dark-header">
     <a class="skip-link" href="#main">Saltar al contenido principal</a>
     <header>
         <div class="logo-container">
