--- a/gastronomia.html
+++ b/gastronomia.html
@@ -15,13 +15,13 @@
     
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/gastronomia.html">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="css/styles.css?v=2025111502">
+    <!-- Font Awesome (local) - PRIMERO para que styles.css pueda sobrescribir -->
+    <link rel="stylesheet" href="css/fontawesome/all.min.css?v=20251115">
+    <link rel="stylesheet" href="css/styles.css?v=2025111503">
     <!-- Google Fonts: Inter para texto, Playfair Display para títulos -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <!-- Swiper for galleries/timeline -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <meta name="description" content="Gastronomía de Fuerteventura 2025: descubre los mejores restaurantes, platos típicos canarios, queso majorero DOP, papas arrugadas y la cocina tradicional de la isla.">
     <meta name="keywords" content="restaurantes Fuerteventura, gastronomía canaria, queso majorero, papas arrugadas, gofio, donde comer Fuerteventura, cocina tradicional Canarias, restaurantes Corralejo">
     <meta name="robots" content="index, follow">
