Fix Font Awesome DEFINITIVO: Usar CDN como index.html en vez de local

--- a/alojamiento.html
+++ b/alojamiento.html
@@ -15,13 +15,14 @@
     
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/alojamiento.html">
     <link rel="manifest" href="manifest.webmanifest">
-    <!-- Font Awesome (local) - PRIMERO para que styles.css pueda sobrescribir -->
-    <link rel="stylesheet" href="css/fontawesome/all.min.css?v=20251115">
     <link rel="stylesheet" href="css/styles.css?v=2025111503">
     <!-- Google Fonts: Inter para texto, Playfair Display para títulos -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <!-- Swiper for galleries/timeline -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+    <!-- Font Awesome con carga optimizada -->
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"></noscript>
     <meta name="description" content="Encuentra el mejor alojamiento en Fuerteventura 2025: hoteles todo incluido, apartamentos vacacionales, villas de lujo y casas rurales. Corralejo, Caleta de Fuste, Jandía y más.">
     <meta name="keywords" content="hoteles Fuerteventura, apartamentos Fuerteventura, alojamiento Corralejo, hoteles Caleta de Fuste, villas Fuerteventura, todo incluido Canarias, donde alojarse Fuerteventura">
     <meta name="robots" content="index, follow">
